--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
   <head>
+
+    <meta charset="UTF-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>My Personal Introduction</title>
 
@@ -30,6 +34,11 @@
 
     <p>I am a mom, a small business owner, and a cyber security student. I love making designs for fun.  Reading Five pages a day is my daily goal. I try my best to live in the moment.</p>
 
+    <ul>
+       <li><a href="README.md">README.md</a></li>
+       <li><a href="agama_python_script.html">agama_python_script.html</a></li>
+       <li><a href="hello_world_AGAMA.html">hello_world_AGAMA.html</a></li>
+    </ul>
   </body>
 
 </html>
