--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
     <p>I am a mom, a small business owner, and a cyber security student. I love making designs for fun.  Reading Five pages a day is my daily goal. I try my best to live in the moment.</p>
 
     <ul>
-       <li><a href="README.md">README.md</a></li>
-       <li><a href="agama_python_script.html">agama_python_script.html</a></li>
-       <li><a href="hello_world_AGAMA.html">hello_world_AGAMA.html</a></li>
+       <li><a href="README.md">README</a></li>
+       <li><a href="agama_python_script.html">agama_python_script</a></li>
+       <li><a href="hello_world_AGAMA.html">hello_world_AGAMA</a></li>
+       <li><a href="python-game.html">python-game</a></li>
     </ul>
   </body>
 
